# aoc

./: .bazelignore  .bazelrc  .clang-format  .gitignore  MODULE.bazel  WORKSPACE.bzlmod
2023/day_01/: BUILD.bazel  lib.cc  lib.h  test.cc
